lab4 and homework done

--- a/lab4/report/02-intro.tex
+++ b/lab4/report/02-intro.tex
@@ -13,7 +13,7 @@
 \begin{enumerate}[label={\arabic*)}]
 	\item изучить основы параллельных вычислений;
 	\item изучить алгоритм трассировки лучей;
-	\item разработать алгоритм трассировки лучей;
+	\item разработать параллельную версию алгоритма трассировки лучей;
 	\item реализовать последовательную и параллельную трассировку лучей;
 	\item провести сравнительный анализ времени работы реализаций.
 \end{enumerate}
