--- a/lab4/report/10-analysis.tex
+++ b/lab4/report/10-analysis.tex
@@ -2,7 +2,7 @@
 
 В данном разделе будет приведена теория, необходимая для разработки и реализации последовательного и параллельного алгоритма трассировки лучей.
 
-\section{Алгоритм трасссировки ллучей}
+\section{Алгоритм трассировки лучей}
 
  Алгоритм трассировки лучей работает в пространстве изображений и имеет 2 подхода: прямой и обратный.
  
@@ -25,6 +25,6 @@
 Поскольку алгоритм обратной трассировки лучей обрабатывает каждый пиксель экрана независимо, можно использовать параллельные вычисления для уменьшения времени его работы, разбив экран на некоторые части. Наиболее часто используется горизонтальное или вертикальное разбиение (в данной работе используется второе) \cite{article_paral}.
 
 
-\section*{Вывод}
-В данном разделе были рассмотрены идеи и материалы, необходимые для разработки и реализации последовательного и параллельного алгоритма трассировки лучей.
+\section{Вывод из аналитической части}
+В данном разделе были рассмотрены идеи и материалы, необходимые для разработки и реализации последовательного и параллельного алгоритмов трассировки лучей.
 
