--- a/lab4/report/20-design.tex
+++ b/lab4/report/20-design.tex
@@ -1,11 +1,12 @@
 \chapter{Конструкторская часть}
 
-В данном разделе будет приведеная схема последедовательного алгоритма обратной трассировки лучей, а также схемы главного и рабочего потока для параллельной реализации этого алгоритма.
+В данном разделе будет приведеная схема последовательного алгоритма обратной трассировки лучей, а также схемы главного и рабочего потока для параллельной реализации этого алгоритма.
 
 \section{Схема последовательного алгоритма трассировки лучей}
 
 На рисунке \ref{fig:trass_simple} приведена схема последовательного алгоритма трассировки лучей.
 
+\newpage
 \begin{figure}[h!]
 	
 	\centering{\includegraphics[scale=0.7]{inc/img/trass_simple.png}}
@@ -32,6 +33,7 @@
 
 На рисунке \ref{fig:trass_count} приведена схема рабочего потока для параллельной реализации алгоритма трассировки лучей.
 
+\newpage
 \begin{figure}[h!]
 	
 	\centering{\includegraphics[scale=0.7]{inc/img/trass_count.png}}
@@ -44,7 +46,7 @@
 
 
 
-\section*{Вывод}
+\section{Вывод из конструкторской части}
 
 Были разработаны схемы базового и параллельного алгоритмов обратной трассировки лучей.
 
