--- a/lab4/report/30-impl.tex
+++ b/lab4/report/30-impl.tex
@@ -7,12 +7,12 @@
 
 Основное требование к языку программирования в данной лабораторной работе - наличие в нем нативных потоков. Язык C\# обладает этим свойством и уже использовался мною ранее, поэтому и был выбран  \cite{CBook}. 
 
-Для замеров времени используется предоставляемый класс Stopwatch, а для организации распараллеливания - пространство имен System.Threading , которое содержит в себе классы, поддерживающие многопоточное программирование \cite{CBook}, и самостоятельно реализованный вспомогательный класс Limits.
+Для замеров времени используется предоставляемый класс Stopwatch, а для организации распараллеливания - пространство имен System.Threading, которое содержит в себе классы, поддерживающие многопоточное программирование \cite{CBook}, и самостоятельно реализованный вспомогательный класс Limits.
 
-В качестве среды разработки выбрана “Visual Studio 2019” так как она предоставляет умную проверку кода и его автоматический рефакторинг, что делает возможным быстрое выявление и исправление ошибок.
+В качестве среды разработки выбрана “Visual Studio 2019” так как она предоставляет автоматическую проверку кода и его автоматический рефакторинг, что делает возможным быстрое выявление и исправление ошибок.
 
 
-\section{Листинги кода}
+\section{Реализация алгоритмов}
 
 \lstset{style=sharpc}
 
@@ -84,8 +84,9 @@ public Bitmap render_parallelized()
 
 \section{Тестирование}
 
-На рисунке \ref{fig:work_example} приведен результат тестирования программы.
+На рисунке \ref{fig:work_example} приведен результат тестирования программы по методу черного ящика: проведен запуск программного обеспечения для рендера сцены, состоящей из поверхности земли, повехности неба (стена на некотором расстоянии с текстурой) и флюгера (сложносоставной модели), добавлены два источника света -- один точечный и один направленный. Программа успешно выполнила рендер сцены на восьми потоках, изображение совпало с ожидаемым -- с тем, которое было получено при запуске последовательной версии алгоритма. На рис. \ref{fig:work_example} представлено полученное изображение.
 
+\newpage
 \begin{figure}[h!]
 	
 	\centering{\includegraphics[scale=0.7]{inc/img/work_example.png}}
@@ -97,6 +98,6 @@ public Bitmap render_parallelized()
 \end{figure}
 
 
-\section*{Вывод}
+\section{Вывод из технологической части}
 
 Был производен выбор средств реализации, реализованы и протестированы последовательный и параллельный алгоритмы обратной трассировки лучей.
