--- a/lab4/report/40-research.tex
+++ b/lab4/report/40-research.tex
@@ -24,18 +24,18 @@
 Так как некоторые реализации выполняются достаточно быстро, а замеры времени имеют некоторую погрешность, они для каждой реализации и каждого количества элементов на сцене выполнялись 10 раз, а затем вычислялось среднее время работы.
  
 
-На рисунке \ref{img:time_all} приведены результаты сравнения времени работы всех реализаций на всех данных. 
+На рисунке \ref{img:time_all} приведены результаты сравнения времени работы всех реализаций на всех данных (в легенде количество потоков указано как n\_threads). 
 
 \img{120mm}{time_all}{Сравнение времени работы реализаций в зависимости от количества элементов на сцене}
 
-Последовательная реализация и параллельная реализация с одним потоком, как и ожидалось, работают примерно одинаковое количество времени, хотя при этом вторая-немного дольше в связи с накладными расходами на создание потока. Эти две реализации заняли наибольшее количество времени из всех сравниваемых.
+Последовательная реализация и параллельная реализация с одним потоком, как и ожидалось, работают примерно одинаковое количество времени, хотя при этом вторая немного дольше в связи с накладными расходами на создание потока. Эти две реализации затратили наибольшее количество времени из всех сравниваемых.
 
 Далее с ростом числа потоков время работы соответствующей параллельной реализации уменьшается, так как независимые вычисления производятся одновременно на разных ядрах. Это происходит вплоть до момента, когда используются 8 потоков, то есть их количество равно количеству логических ядер в компьютере.
 
-При дальнейшем увеличении числа потоков время работы параллельной реализации больше, чем в описанной выше наилучшей точке, так как количество потоков становится больше количества логических ядер в компьютере, и, соответсвенно, некоторые из них вынуждены ожидать освобождения занятого другим потоком процессора, который смог бы провести необходимые вычисления. В результате теряется смысл в выделении этих потоков, так как одновременной обработки каждого из них не происходит, а дополнительное время на их организацию затрачивается.
+При дальнейшем увеличении числа потоков время работы параллельной реализации больше, чем в описанной выше наилучшей точке, так как количество потоков становится больше количества логических ядер в компьютере, и, соответственно, некоторые из них вынуждены ожидать освобождения занятого другим потоком процессора, который смог бы провести необходимые вычисления. В результате теряется смысл в выделении этих потоков, так как одновременной обработки каждого из них не происходит, а дополнительное время на их организацию затрачивается.
 
 
 
-\section*{Вывод}
+\section{Вывод из исследовательской часть}
 
 Таким образом, далеко не всегда двукратное увеличение числа потоков улучшает результат по времени. Это происходит, пока количество потоков меньше или равно количеству логических ядер в ЭВМ. Поэтому рекомендуемым числом потоков можно назвать число, равное количеству логических процессоров.
