--- a/lab4/report/50-conclusion.tex
+++ b/lab4/report/50-conclusion.tex
@@ -1,13 +1,13 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В результате выполнения лабораторной работы были изучены основы организации параллельных вычислений на базе алгоритма трассировки лучей.
+В результате выполнения лабораторной работы была достигнута поставленная цель: были изучены основы организации параллельных вычислений на базе алгоритма трассировки лучей.
 
 В ходе выполнения лабораторной работы были выполнены следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
 	\item изучены основы параллельных вычислений;
 	\item изучен алгоритм трассировки лучей;
-	\item разработан алгоритм трассировки лучей;
+	\item разработан параллельный алгоритм трассировки лучей;
 	\item реализованы последовательная и параллельная трассировки лучей;
 	\item проведен сравнительный анализ времени работы реализаций.
 \end{enumerate}
