--- a/lab5/report/20-design.tex
+++ b/lab5/report/20-design.tex
@@ -18,9 +18,9 @@
 
 При этом в программе предусмотрен пул обработанных задач и 3 очереди заявок - по одной на каждую ленту. Очередь первой ленты заранее заполняется генератором заявок. Во вторую очередь заявки заносятся первой лентой после выполнения ею назначенной задачи, в третью очередь - второй лентой, в пул обработанных задач  - третьей лентой.
 
-Хотя для каждой ленты создана своя очередь, ко 2 и 3 очередям могут одновременно обратиться сразу два потока: предыдущий для записи в нее новой заявки и текущий (соответствующий номеру очереди) для получения новой заявки (в 1 очереди такая ситуация невозможна, так как она заполняется генератором заранее). Поэтому при доступе к элементам 1 и 2 очередей необходимо блокировать доступ для других потоков, для чего используются мьютексы, по одному для каждой очереди.
+Хотя для каждой ленты создана своя очередь, ко 2 и 3 очередям могут одновременно обратиться сразу два потока: предыдущий для записи в нее новой заявки и текущий (соответствующий номеру очереди) для получения новой заявки (в 1 очереди такая ситуация невозможна, так как она заполняется генератором заранее). Поэтому при доступе к элементам 2 и 3 очередей необходимо блокировать доступ для других потоков, для чего используются мьютексы, по одному для каждой очереди.
   
-Для сбора статистики процесса обработки заявок конвейером предусмотрено сохранение информации о времени поступления и покидания очередной заявкой каждой очереди.
+Для сбора статистики процесса обработки заявок конвейером предусмотрено сохранение информации о времени поступления заявки в очередную очередь и времени выхода из нее.
 
 \section{Схемы этапов алгоритма стандартизации}
 
@@ -79,7 +79,7 @@
 \newpage
 \section{Схемы параллельного конвейера для стандартизации}
 
-На рисунке \ref{fig:parallel} приведена схема главного потока параллельного конвейера для обработки заявок на стандартизацию массивов, который, запускает и контролирует рабочие потоки.
+На рисунке \ref{fig:parallel} приведена схема главного потока параллельного конвейера для обработки заявок на стандартизацию массивов, который запускает и контролирует рабочие потоки.
 
 \newpage
 \begin{figure}[h!]
