--- a/lab5/report/50-conclusion.tex
+++ b/lab5/report/50-conclusion.tex
@@ -1,14 +1,15 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В результате выполнения лабораторной работы была достигнута поставленная цель: были изучены основы организации параллельных вычислений на базе алгоритма трассировки лучей.
+В результате выполнения лабораторной работы была достигнута поставленная цель: были изучены основы организации конвейерной обработки данных на базе алгоритма стандартизации массива.
 
 В ходе выполнения лабораторной работы были выполнены следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
-	\item изучены основы параллельных вычислений;
-	\item изучен алгоритм трассировки лучей;
-	\item разработан параллельный алгоритм трассировки лучей;
-	\item реализованы последовательная и параллельная трассировки лучей;
+	\item изучены основы конвейеризации;
+	\item изучен алгоритм стандартизации;
+	\item разработана параллельная версия конвейера для стандартизации с 3 стадиями обработки;
+	\item реализован линейный и параллельный конвейерный варианты стандартизации;
+	\item собрана статистика времени обработки заявок конвейром;
 	\item проведен сравнительный анализ времени работы реализаций.
 \end{enumerate}
 
