--- a/lab5/report/51-biblio.bib
+++ b/lab5/report/51-biblio.bib
@@ -26,6 +26,6 @@
 }
 
 @misc{CBook2,
-	title="Структура system_clock [Электронный ресурс]",
+	title="Структура systemclock [Электронный ресурс]",
 	howpublished="Режим доступа: \url{https://docs.microsoft.com/ru-ru/cpp/standard-library/system-clock-structure?view=msvc-160} (дата обращения: 20.10.2021)"
 }
