--- a/lab5/report/20-design.tex
+++ b/lab5/report/20-design.tex
@@ -1,6 +1,6 @@
 \chapter{Конструкторская часть}
 
-В данном разделе будет описана структура и принцип работы разрабатываемого конвейра, а также будут приведены схемы для: этапов алгоритма стандартизации данных; линейного алгоритма стандартизации; главного и рабочих потоков параллельной реализации конвейера.
+В данном разделе будет описана структура и принцип работы разрабатываемого конвейра, а также будут приведены схемы для этапов алгоритма стандартизации данных, для линейного алгоритма стандартизации, для главного и рабочих потоков параллельной реализации конвейера.
 
 \section{Разработка конвейера}
 
@@ -77,7 +77,7 @@
 \end{figure}
 
 \newpage
-\section{Схемы параллельного конвейера для стандартизации}
+\section{Схемы параллельной обработки данных конвейером для стандартизации}
 
 На рисунке \ref{fig:parallel} приведена схема главного потока параллельного конвейера для обработки заявок на стандартизацию массивов, который запускает и контролирует рабочие потоки.
 
@@ -93,7 +93,7 @@
 \end{figure}
 
 \newpage
-На рисунках \ref{fig:paral_mean} - \ref{fig:paral_transformer} приведены cхемы рабочих потоков конвейера.
+На рисунках \ref{fig:paral_mean}-\ref{fig:paral_transformer} приведены cхемы рабочих потоков конвейера.
 
 
 \begin{figure}[h!]
