--- a/lab5/report/30-impl.tex
+++ b/lab5/report/30-impl.tex
@@ -15,7 +15,7 @@
 
 Чтобы наглядно показать, что ленты конвейра работают параллельно, в класс завок добавлены отметки времени поступления заявки в очередную очередь (или в пул обработанных задач) и времени покидания очередной очереди. В процессе обработки заявок конвейром в лог выводится информация о каждом подобном событии для каждой заявки.
 
-На выходе, когда все заявки обработаны системой, собирается статистика.
+На выходе, когда все заявки обработаны системой, собирается следующая статистика.
 \begin{enumerate}[label={\arabic*)}]
 	\item На сколько время обработки N заявок снижено в параллельной реализации конвейера по сравнению с последовательной обработкой одним потоком. Для этого перед запуском и после завершения каждой из реализаций запоминаются данные системных часов в реальном времени, затем второе время вычитается из первого, и получается время работы этой реализации. Далее показания реализаций сравниваются.
 	
@@ -187,7 +187,7 @@ void Conveyor::run_linear(size_t n_tasks, size_t n, double *arr, double *new_arr
 	
 	\centering{\includegraphics[scale=0.8]{inc/img/stats.png}}
 	
-	\caption{Cбора статистики}
+	\caption{Пример собранной статистики}
 	
 	\label{fig:stats2}
 	
