--- a/lab5/report/40-research.tex
+++ b/lab5/report/40-research.tex
@@ -39,15 +39,15 @@
 	
 	\centering{\includegraphics[scale=1]{inc/img/stats.png}}
 	
-	\caption{Резултат сбора статистики}
+	\caption{Результат сбора статистики}
 	
 	\label{fig:stats}
 	
 \end{figure}
 
 
-Как видно из рисунка, очереди с наибольшим максимальным временем нахождения в них заявки - первая и третья.
- Для первой такой результат объясняетсяя тем, что она заполняется генератором заранее, и последняя заявка находится в ней до того момента, пока все предшествующие ей не будут обработаны первой лентой. Это подтверждает и среднее время, проведенное заявкой в первой очереди, которое приблизительно равно половине от максимального.
+Как видно из рисунка, очереди с наибольшим максимальным временем нахождения в них заявки -- первая и третья.
+ Для первой очереди такой результат объясняетсяя тем, что она заполняется генератором заранее, и последняя заявка находится в ней до того момента, пока все предшествующие ей не будут обработаны первой лентой. Это подтверждает и среднее время, проведенное заявкой в первой очереди, которое приблизительно равно половине от максимального.
  
  Для третьей же очереди наибольшее максимальное (и, в частности, среднее) время нахождения в ней заявки связано со сложностью работы соответсвующей ей ленты. Она преобразовывает исходный массив, записывая полученные в результате вычитаний и делений новые значения в результирующий массив, на что тратится большое количество операций и, соовтетсвенно,  время.
 
@@ -59,6 +59,6 @@
 При этом можно заметить, что минимальное, максмальное и среднее время, проведенное заявкой в системе слабо  отличается от тех же замеров для времени, проведенного заявкой в очередях. Это, а также анализ времени, проведенного заявками в третьей очереди,  еще раз подтверждает, что при организации параллельного конвейера необходимо разбивать задачу на этапы, схожие по трудоемкости, иначе большую часть времени заявки будут простаивать в очередях.
 
 
-\section{Вывод из исследовательской часть}
+\section{Вывод из исследовательской части}
 
 Таким образом, параллельная организацияя обработки данных с использованием конвейера  работает быстрее, чем линейная обработка. При этом для достижения наилучших показателей необходимо корректно разделять задачу на этапы: так, чтобы время их выполнения было приблизительно равным, иначе большую часть времени заявки будут простаивать в очереди наиболее трудоемкой ленты.
