--- a/lab6/report/20-design.tex
+++ b/lab6/report/20-design.tex
@@ -1,136 +1,70 @@
 \chapter{Конструкторская часть}
 
-В данном разделе будет описана структура и принцип работы разрабатываемого конвейра, а также будут приведены схемы для этапов алгоритма стандартизации данных, для линейного алгоритма стандартизации, для главного и рабочих потоков параллельной реализации конвейера.
+В данном разделе будут приведены схемы алгоритма полного перебора и муравьиного алгоритма для решения задачи коммивояжера.
 
-\section{Разработка конвейера}
+\section{Схема алгоритма полного перебора}
 
-Алгоритм стандартизации массива можно разделить на 3 этапа:
-\begin{enumerate}[label={\arabic*)}]
-	\item вычисление среднего значения;
-	\item вычисление стандартного отклонения;
-	\item вычисление стандартизованных значений.
-\end{enumerate}
+На рисунке \ref{fig:next_set} приведена cхема вспомогательной функции next\_set, которая позволяет сгенерировать все возможные перестановки первых n неотрицательных чисел.
 
-Таким образом, конвейер состоит из 3 лент, каждая из которых выполняет соответствующий этап. Для каждой ленты в главном потоке создается отдельный поток. 
-
-Рабочий поток выполняется, пока не завершит обработку всех заявок, для чего в него передается общее количество задач, а в нем самом заводится счетчик уже обработанных заявок. 
-
-
-При этом в программе предусмотрен пул обработанных задач и 3 очереди заявок - по одной на каждую ленту. Очередь первой ленты заранее заполняется генератором заявок. Во вторую очередь заявки заносятся первой лентой после выполнения ею назначенной задачи, в третью очередь - второй лентой, в пул обработанных задач  - третьей лентой.
-
-Хотя для каждой ленты создана своя очередь, ко 2 и 3 очередям могут одновременно обратиться сразу два потока: предыдущий для записи в нее новой заявки и текущий (соответствующий номеру очереди) для получения новой заявки (в 1 очереди такая ситуация невозможна, так как она заполняется генератором заранее). Поэтому при доступе к элементам 2 и 3 очередей необходимо блокировать доступ для других потоков, для чего используются мьютексы, по одному для каждой очереди.
-  
-Для сбора статистики процесса обработки заявок конвейером предусмотрено сохранение информации о времени поступления заявки в очередную очередь и времени выхода из нее.
-
-\section{Схемы этапов алгоритма стандартизации}
-
-На рисунках \ref{fig:mean} - \ref{fig:transformer} приведены cхемы этапов алгоритма стандартизации.
-
-\newpage
+\clearpage
 \begin{figure}[h!]
 	
-	\centering{\includegraphics[scale=0.7]{inc/img/mean.png}}
+	\centering{\includegraphics[scale=0.6]{inc/img/next_set.png}}
 	
-	\caption{Схема этапа поиска среднего значения в массиве}
+	\caption{Схема вспомогательной функции next\_set}
 	
-	\label{fig:mean}
+	\label{fig:next_set}
 	
 \end{figure}
 
-\newpage
-\begin{figure}[h!]
-	
-	\centering{\includegraphics[scale=0.7]{inc/img/std_dev.png}}
-	
-	\caption{Схема этапа поиска стандартного отклонения}
-	
-	\label{fig:std_dev}
-	
-\end{figure}
-
-\newpage
-\begin{figure}[h!]
-	
-	\centering{\includegraphics[scale=0.7]{inc/img/transformer.png}}
-	
-	\caption{Схема этапа преобразования (стандартизации) массива}
-	
-	\label{fig:transformer}
-	
-\end{figure}
-
-
-\newpage
-\section{Схема линейного алгоритма стандартизации}
-
-На рисунке \ref{fig:linear} приведена схема линейного алгоритма обработки заявок на стандартизацию массивов.
-
-\newpage
-\begin{figure}[h!]
-	
-	\centering{\includegraphics[scale=0.7]{inc/img/linear.png}}
-	
-	\caption{Схема линейного алгоритма обработки заявок на стандартизацию массивов}
-	
-	\label{fig:linear}
-	
-\end{figure}
-
-\newpage
-\section{Схемы параллельной обработки данных конвейером для стандартизации}
-
-На рисунке \ref{fig:parallel} приведена схема главного потока параллельного конвейера для обработки заявок на стандартизацию массивов, который запускает и контролирует рабочие потоки.
-
-\newpage
-\begin{figure}[h!]
-	
-	\centering{\includegraphics[scale=0.7]{inc/img/parallel.png}}
-	
-	\caption{Схема главного потока параллельного конвейера}
-	
-	\label{fig:parallel}
-	
-\end{figure}
-
-\newpage
-На рисунках \ref{fig:paral_mean}-\ref{fig:paral_transformer} приведены cхемы рабочих потоков конвейера.
+\clearpage
+На рисунке \ref{fig:count_len} приведена cхема вспомогательной функции count\_way\_len, которая с помощью матрицы смежности D вычисляет длину пути при проходе по городам visited\_cities.
 
 
 \begin{figure}[h!]
 	
-	\centering{\includegraphics[scale=0.7]{inc/img/paral_mean.png}}
+	\centering{\includegraphics[scale=0.7]{inc/img/count_len.png}}
 	
-	\caption{Схема потока для поиска среднего значения в массиве}
+	\caption{Схема вспомогательной функции count\_way\_len}
 	
-	\label{fig:paral_mean}
+	\label{fig:count_len}
 	
 \end{figure}
 
-\newpage
+\clearpage
+На рисунке \ref{fig:full_search} приведена cхема алгоритма полного перебора для решения задачи коммивояжера.
+
+\clearpage
 \begin{figure}[h!]
 	
-	\centering{\includegraphics[scale=0.7]{inc/img/paral_std_dev.png}}
+	\centering{\includegraphics[scale=0.7]{inc/img/full_search.png}}
 	
-	\caption{Схема потока для поиска стандартного отклонения}
+	\caption{Схема алгоритма полного перебора}
 	
-	\label{fig:paral_std_dev}
+	\label{fig:full_search}
 	
 \end{figure}
 
-\newpage
+
+\clearpage
+\section{Схема муравьиного алгоритма}
+
+На рисунке \ref{fig:ant_search} приведена схема муравьиного алгоритма для решения задачи коммивояжера.
+
 \begin{figure}[h!]
 	
-	\centering{\includegraphics[scale=0.7]{inc/img/paral_transformer.png}}
+	\centering{\includegraphics[scale=0.7]{inc/img/ant_search.png}}
 	
-	\caption{Схема потока для преобразования (стандартизации) массива}
+	\caption{Схема муравьиного алгоритма}
 	
-	\label{fig:paral_transformer}
+	\label{fig:ant_search}
 	
 \end{figure}
 
-\newpage
+
+\clearpage
 \section{Вывод из конструкторской части}
 
-Была описана структура и принцип работы разрабатываемого конвейра, а также приведены схемы разрабатываемых алгоритмов.
+Были приведены схемы разрабатываемых алгоритмов.
 
 
