--- a/lab6/report/51-biblio.bib
+++ b/lab6/report/51-biblio.bib
@@ -18,18 +18,33 @@
 	howpublished="Режим доступа: \url{https://scienceforum.ru/2021/article/2018025171} (дата обращения: 28.10.2021)"
 }
 
-@misc{fourth_article,
-	title="Стандартное отклонение [Электронный ресурс]",
-	howpublished="Режим доступа: \url{https://www.uznaychtotakoe.ru/standartnoe-otklonenie/} (дата обращения: 19.10.2021)"
+@inbook{PythonBook,
+	author="Лутц, Марк",
+	title="Изучаем Python, том 1, 5-е изд.",
+	publisher="Пер. с англ. — СПб.: ООО “Диалектика”",
+	volume=832,
+	language="russian",
+	year=2019
+}
+
+@misc{process_time_text,
+	title="time — Time access and conversions [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://docs.python.org/3/library/time.html} (дата обращения: 05.09.2021)"
+}
+
+@misc{memory_usage_text,
+	title="memory-profiler [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://pypi.org/project/memory-profiler/} (дата обращения: 05.09.2021)"
+}
+
+@misc{pycharm,
+	title="Python и Pycharm [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://py-charm.blogspot.com/2017/09/pycharm.html} (дата обращения: 05.09.2021)"
 }
 
 
-@misc{CBook,
-	title="Thread support library [Электронный ресурс]",
-	howpublished="Режим доступа: \url{https://en.cppreference.com/w/cpp/thread} (дата обращения: 20.10.2021)"
-}
 
-@misc{CBook2,
-	title="Структура systemclock [Электронный ресурс]",
-	howpublished="Режим доступа: \url{https://docs.microsoft.com/ru-ru/cpp/standard-library/system-clock-structure?view=msvc-160} (дата обращения: 20.10.2021)"
+@misc{manjaro,
+	title="Manjaro -- enjoy the simplicity [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://manjaro.org/} (дата обращения: 14.09.2020)"
 }
