--- a/lab6/report/preamble.inc.tex
+++ b/lab6/report/preamble.inc.tex
@@ -67,7 +67,6 @@
 \usepackage{csvsimple}
 
 \usepackage{listings}
-\lstloadlanguages{[Visual]C++}
 % Для листинга кода:
 \lstset{ %
 	language=Python,                 
@@ -87,7 +86,7 @@
 	escapeinside={\#*}{*)}   % если нужно добавить комментарии в коде
 }
 
-\lstdefinestyle{sharpc}{language=[Sharp]C, frame=lr, rulecolor=\color{blue!80!black}}
+%\lstdefinestyle{sharpc}{language=[Sharp]C, frame=lr, rulecolor=\color{blue!80!black}}
 
 
 
